--- a/java.html
+++ b/java.html
@@ -6,6 +6,7 @@
 	<h1><i>sirisha</i></h1>
 	<p1>Pikachu was designed around the concept of electricity. They are creatures that have short, yellow fur with brown markings covering their backs and parts of their lightning bolt-shaped tails. They have black-tipped, .</p1>
 	<img width="30%" src="pikachu.jpeg">
+	<img width="30%" src="siri.jpeg">
 	<a href="index.html">click here</a>to visit the html file
 	</body>
 </html>
